--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,33 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:react/recommended",
+    "plugin:import/typescript",
+    "airbnb",
+    "airbnb-typescript",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeature": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["react", "@typescript-eslint", "prettier"], // prettier should be last of array
+  "ignorePatterns": ["tailwind.config.js", "next.config.js"],
+  "rules": {
+    "react/react-in-jsx-scope": 0,
+    "operator-linebreak": 0,
+    "@typescript-eslint/quotes": 0,
+    "@typescript-eslint/comma-dangle": 0,
+    "prettier/prettier": ["off", { "singleQuote": true }]
+  }
 }
